<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MoneyPal</string>
    <string name="title_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_groupe">groupes</string>
    <string name="phone_number">691621708</string>
    <string name="text_view_date">Solde du compte à la date du</string>
    <string name="montant_total">0.0 FCFA</string>
    <string name="btn_tout_voir">Tout voir</string>
    <string name="add_member">+ ADD MEMBER</string>
    <string name="payMember">PAY MEMBER</string>
    <string name="statistiques_des_d_penses">statistiques des dépenses</string>
    <string name="mes_objectifs">Creer un groupe d\'objectif</string>
    <string name="mon_compte">Mon profils</string>
    <string name="selection_inconu">Element sélectionnée inconnus</string>
    <string name="derniere_transaction">Derniere Transaction</string>
    <string name="vacance_a_kribi">Vacance A Kribi</string>
    <string name="chargement_des_transactions">Chargement des transactions...</string>
    <string name="cliquez_dessus_pour_definir_une_photo_de_profils">Cliquez dessus pour definir/modifier une photo de
        profils
    </string>
    <string name="nom">nom</string>
    <string name="my_phone">telephone</string>
    <string name="mise_jours_du_profils">Mise à jours du profils</string>
    <string name="se_d_conneccter">Se déconneccter</string>
    <string name="supprimer_mon_compte">Supprimer mon compte</string>
    <string name="alert_entrez_nom_utilisateur">Entrez votre nom d\'utilisateur</string>
    <string name="alert_configurer_votre_profils_utilisateur">Configurer votre profils utilisateur?</string>
    <string name="snackbar_erreur_connexion">Erreur de connexion</string>
    <string name="snack_bar_erreur_reseau">Pas de réseau</string>
    <string name="snackbar_erreur_inkonu">Erreur inconnue</string>
    <string name="string_transaction_item_par">par</string>
    <string name="d_tails_de_la_transaction">Détails de la transaction</string>
    <string name="user_profil_nom_requis">Nom Requis!!</string>
    <string name="snack_bar_aucune_transaction">Aucune transaction orange détectée</string>
    <string name="addresse_email">addresse email</string>
    <string name="snack_bar_config_init_profil_erreur">Erreur de configuration initial du profil, ce compte semble déja
        exister
    </string>
    <string name="pdialog_recherche_transactions">ReCherche des transactions...</string>
    <string name="chiquez_image_groupe">Cliquez pour sélectionner l\'image du groupe</string>
    <string name="nom_groupe">Nom du groupe ou objectif de cotisation</string>
    <string name="creer_un_groupe">Creer un groupe</string>
    <string name="description_groupe">Description du groupe ou de l\'objectif</string>
    <string name="montant_objectif">Motant à cotiser FCFA</string>
    <string name="text_creer_groupe">Creer le groupe</string>
    <string name="text_anuler_creation">Annuler la creation</string>
    <string name="creation_group_champ_requis">Champ requis !!</string>
    <string name="pdialog_progression_en_cour">Création du groupe en cours...</string>
    <string name="transaction_item_par">par</string>
    <string name="date_echeance">date d\'échéance</string>
    <string name="text_fcfa">FCFA</string>
    <string name="item_alert_dialog_lis_appelr">Appeller</string>
    <string name="item_alert_dialog_transfert_argen">Transferer de l\'argent à</string>
    <string name="Home">Acceuil</string>
    <string name="objectifs">Objectifs</string>
    <string name="statistiques">Statistiques</string>
    <string name="title_activity_firts_splash_screen">FirtsSplashScreen</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <!--    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear
        data
    </string>
    <string name="play_again">Play Again</string>-->
    <string name="revoir_l_intro">Revoir l\'intro</string>
    <string name="text_anuler_le_payement">Annuler le payement</string>
    <string name="proceder_au_payement">Proceder au payement</string>
    <string name="text_payement">Payement</string>
    <string name="montant_contribution">Entrez le montant de votre part de contribution</string>
    <string name="text_payement_montant_a_cotiser">Montant à Atteindre :</string>
    <string name="text_view_slide1">Transferez de l\'argent en toutes simplicité et en toute sécurité</string>
    <string name="second_text_view_slide2">Transfert d\'argent</string>
    <string name="text_view_slide2">Comptabiliser vos entrées-sorties de votre compte mobile n\'a jamais été aussi
        simple
    </string>
    <string name="secondtext_view_slide2">Statistiques de vos transactions</string>
    <string name="text_view_slide3">Creer des objectifs, fixéz un montant et invitez vos amis à rejointre votre
        objectif
    </string>
    <string name="secondtext_view_slide3">Groupe d\'objectif</string>
    <string name="ms_entre_mnt_correct">Entrez un montant non vide!!</string>
    <string name="snack_bar_erreur_action_payement_sim">Désoler nous n\'avons pas pu détecter une carte SIM compatible
        pour ce payement dans votre telephone
    </string>
    <string name="montant_restant_text">Montant restant:</string>
    <string name="ms_montant_tres_grand">Entrez un montant inferieur ou égale au montant restant SVP</string>
    <string name="text_partager_lien">Partager un lien d\'invitation</string>
    <string name="ajouter_graup">Ajouter les membres sélectionnés</string>
    <string name="text_creation_lient_en_cours">Création du lien en cours...</string>
    <string name="snackbar_ajout_group_succes">Vous avez été ajouter dans le groupe avec succes</string>
    <string name="informations_du_groupe">informations du groupe</string>
    <string name="chat_de_groupe">chat de groupe</string>

</resources>
