<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/id_user_profil"
        tools:context=".authentification.UserprofileActivitu">
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="60dp"
                app:cardElevation="6dp">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/mon_compte"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:id="@+id/titre_page"
                        android:textColor="@color/colorPrimary"/>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#8000"
                        android:layout_marginTop="13dp"/>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:paddingLeft="15dp"
                              android:paddingTop="13dp"
                              android:paddingRight="15dp"
                >

                    <!--    <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/id_imageGroupe"
                                android:src="@drawable/icon_groupe_image"/>-->
                    <ImageView
                            android:id="@+id/imageView_profile_picture"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/nom_user"
                            tools:ignore="VectorDrawableCompat"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/cliquez_dessus_pour_definir_une_photo_de_profils"
                    />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_input_layout_montant"
                        android:paddingLeft="15dp"
                        android:paddingTop="13dp"
                        android:paddingRight="15dp">

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/my_phone"
                            android:inputType="phone"
                            android:id="@+id/id_edit_telephone"
                            android:maxLines="1"
                            android:enabled="false"
                            android:ellipsize="end"
                            android:textColor="@color/colorPrimary"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_input_layout_destinataire"
                        android:paddingLeft="15dp"
                        android:paddingTop="13dp"
                        android:paddingRight="15dp">

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nom"
                            android:textColor="@color/colorPrimary"
                            android:inputType="text"
                            android:id="@+id/id_editText_name"
                            android:maxLines="1"
                            android:ellipsize="end"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_input_layout_emailadresse"
                        android:paddingLeft="15dp"
                        android:paddingTop="13dp"
                        android:paddingRight="15dp">

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/addresse_email"
                            android:textColor="@color/colorPrimary"
                            android:inputType="textEmailAddress"
                            android:id="@+id/id_editText_email"
                            android:maxLines="1"
                            android:ellipsize="end"/>
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:paddingLeft="15dp"
                              android:paddingTop="13dp"
                              android:paddingRight="15dp"
                >
                    <Button
                            android:id="@+id/id_btn_save"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorwhite"
                            android:backgroundTint="?attr/colorAccent"
                            android:text="@string/mise_jours_du_profils"/>

                    <Button
                            android:id="@+id/id_btn_sign_out"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:backgroundTint="@color/colorPrimary"
                            android:textColor="@color/colorwhite"
                            android:text="@string/se_d_conneccter"/>
                    <Button
                            android:id="@+id/btn_sign_dele_caount"
                            android:layout_width="match_parent"
                            android:layout_alignParentBottom="true"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorwhite"

                            android:backgroundTint="#ee1010"
                            android:text="@string/supprimer_mon_compte"
                    />


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>