<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PayementActivity">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_marginBottom="8dp"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:layout_marginTop="5dp"
                      app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/text_payement"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:id="@+id/titre_page"
                    android:textColor="@color/colorPrimary"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#8000"
                    android:layout_marginTop="13dp"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:paddingLeft="15dp"
                          android:paddingTop="2dp"
                          android:paddingRight="15dp"
            >

                <ImageView
                        android:id="@+id/imageView_profile_groupe_picture"
                        android:layout_width="345dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/noun_user_group_"
                        tools:ignore="VectorDrawableCompat"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_input_layout_nom_group"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nom_groupe"
                        android:id="@+id/id_edit_nom_groupe_payement"
                        android:maxLines="2"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_input_layout_description_group_payement"
                    android:paddingLeft="15dp"
                    android:paddingTop="13dp"
                    android:paddingRight="15dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description_groupe"
                        android:id="@+id/id_description_group_payement"
                        android:maxLines="3"
                        android:textAlignment="center"
                        android:textSize="13sp"
                        android:textColor="@color/colorPrimaryDark"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_input_layout_emailadresse"
                    android:paddingLeft="15dp"
                    android:paddingTop="13dp"
                    android:paddingRight="15dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/montant_objectif"
                        android:id="@+id/id_montant_a_cotiser_group_payement"
                        android:maxLines="3"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimaryDark"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_input_layout_montant"
                    android:paddingLeft="15dp"
                    android:paddingTop="13dp"
                    android:paddingRight="15dp">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/montant_contribution"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:inputType="numberDecimal"
                        android:id="@+id/id_editText_montant_payement"
                        android:maxLines="1"
                        android:ellipsize="end"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:paddingLeft="15dp"
                          android:paddingTop="20dp"
                          android:paddingRight="15dp"
            >

                <Button
                        android:id="@+id/id_btn_proceder_payement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:textColor="@color/colorwhite"
                        android:text="@string/proceder_au_payement"/>
                <Button
                        android:id="@+id/btn_annuler_payement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorwhite"
                        android:backgroundTint="#ee1010"
                        android:text="@string/text_anuler_le_payement"
                />


            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>