<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_user_profil"
        tools:context=".authentification.UserprofileActivitu">
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="60dp"
                app:cardElevation="10dp">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/creer_un_groupe"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:id="@+id/titre_page"
                        android:textColor="@color/colorPrimary"/>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#8000"
                        android:layout_marginTop="13dp"/>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:paddingLeft="15dp"
                              android:paddingTop="13dp"
                              android:paddingRight="15dp"
                >

                    <ImageView
                            android:id="@+id/imageView_profile_groupe_picture"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/icon_groupe"
                            tools:ignore="VectorDrawableCompat"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/chiquez_image_groupe"
                    />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_input_layout_montant"
                        android:paddingLeft="15dp"
                        android:paddingTop="13dp"
                        android:paddingRight="15dp">

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nom_groupe"
                            android:inputType="textAutoComplete"
                            android:id="@+id/id_edit_nom_groupe"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/colorPrimary"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_input_layout_destinataire"
                        android:paddingLeft="15dp"
                        android:paddingTop="13dp"
                        android:paddingRight="15dp">

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description_groupe"
                            android:textColor="@color/colorPrimary"
                            android:inputType="textMultiLine"
                            android:id="@+id/id_editText_description_objectif"
                            android:maxLines="1"
                            android:ellipsize="end"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_input_layout_emailadresse"
                        android:paddingLeft="15dp"
                        android:paddingTop="13dp"
                        android:paddingRight="15dp">

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/montant_objectif"
                            android:textColor="@color/colorPrimary"
                            android:inputType="numberDecimal"
                            android:id="@+id/id_editText_objectif_amount"
                            android:maxLines="1"
                            android:ellipsize="end"/>
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:paddingLeft="15dp"
                              android:paddingTop="13dp"
                              android:paddingRight="15dp"
                >

                    <Button
                            android:id="@+id/id_btn_creer_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:backgroundTint="@color/colorPrimary"
                            android:textColor="@color/colorwhite"
                            android:text="@string/text_creer_groupe"/>
                    <Button
                            android:id="@+id/btn_annuler_creation"
                            android:layout_width="match_parent"
                            android:layout_alignParentBottom="true"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorwhite"

                            android:backgroundTint="#ee1010"
                            android:text="@string/text_anuler_creation"
                    />


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>