<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context=".fragments.HomeFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:background="#42C4D3">
            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/icon_user_male_circle"
                    android:id="@+id/id_image_user_account"
                    android:layout_margin="5dp"/>
            <TextView
                    android:text="@string/text_view_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_text_solde_date"
                    android:layout_margin="5dp"
                    android:textColor="@android:color/background_light"/>
            <TextView
                    android:text="@string/montant_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_text_montnt"
                    android:layout_margin="5dp"
                    android:textSize="25sp"
                    android:textColor="@android:color/background_light"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/black">
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_view_categorie_transactions"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView android:layout_width="164dp"
                          android:layout_height="22dp"
                          android:textColor="@android:color/darker_gray"
                          android:text="@string/derniere_transaction"
                          app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                          android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                          android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                          app:layout_constraintVertical_bias="0.8"/>
                <Button android:layout_width="84dp"
                        android:textColor="@android:color/white"
                        android:layout_height="27dp"
                        android:text="@string/btn_tout_voir"
                        android:background="#2196F3"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/id_receycleView_transactions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>